1998-08-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c: replace free(line) with amfree(line),
	because line is not ensured to be non-NULL
	
	* docs/FAQ: amandad: error receiving message
	
	* docs/FAQ: difference between skip-full and strategy nofull

1998-07-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ: software or hardware compression?

	* server-src/driver.c (adjust_diskspace): do not abort just because
	a holding disk file is missing
	(main): report warning if holding disk directory could not be
	created, and do not use it
	Reported by Albrecht Gebhardt <agebhard@zidsrv.sci.uni-klu.ac.at>

	* example/Makefile.am (EXTRA_DIST): add 8.5x11.ps to the
	distribution
	Reported by Jason L Tibbitts III <tibbs@hpc.uh.edu>

	* server-src/conffile.c (get_holdingdisk): define chunksize 0 as
	INT_MAX/1024, and chunksize -1 as -INT_MAX/1024
	* server-src/driver.c (find_diskspace): accept negative chunksizes
	as the maximum size (in modulus) for using the holding disk
	* man/amanda.8.in (chunksize): document the usage of negative
	values, and improve the explanation of chunking
	* example/amanda.conf.in: ditto

1998-07-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ: disk offline

1998-07-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* restore-src/amidxtaped.c (main): use tape_rewind() instead of
	running `mt'

	* server-src/amcleanup.sh.in (reporter): update to call amreport.
	(amdump.<n>) update to use the same renaming technique introduced in
 	June 30's change to amdump.

1998-07-25  Michael Graff  <explorer@vix.com>

	* changer-src/Makefile.am (install-exec-hook): support $(DESTDIR)
	* client-src/Makefile.am (install-exec-hook): ditto
	* man/Makefile.am (install-data-hook): ditto
	* recover-src/Makefile.am (install-exec-hook): ditto
	* restore-src/Makefile.am (install-exec-hook): ditto
	* server-src/Makefile.am (install-exec-hook): ditto

	* configure.in: link krb5 and com_err in for Kerberos support, if
 	they exist
